[package]
name = "advent-of-code-2021"
version = "0.1.0"
edition = "2021"
default-run = "advent-of-code-2021"

[dependencies]
itertools = "0.10"
paste = "1.0"
convert_case = "0.6"

# for inputs download
reqwest = { version = "0.11", features = [ "gzip", "rustls-tls", "blocking" ], default-features = false }

[dev-dependencies]
criterion = "0.4"

[[bench]]
name = "bench_all"
harness = false
